Scrollbar fix on payslips on Firefox (and others)
flip-cards faces (front/back) now no longer have an explicit overflow: auto
payslip-detail style.scss file now sets overflow to be hidden on card faces by default, and auto on the active card

--- a/app/components/flip-card/style.scss
+++ b/app/components/flip-card/style.scss
@@ -17,7 +17,7 @@
   float: left;
   padding: rem(16);
   background-color: $color-white;
-  overflow-y: auto;
+  // no longer have a default overflow rule on cards - these can be set in use
   -webkit-overflow-scrolling: touch;
   @include hidden-scrollbars;
 }
